# auto-fpt

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: build-and-publish.yaml  hms.yaml
dss/: Dockerfile  README.md  pyproject.toml
dss/converter/: convert.py  main.py  parquet.py
hms/: .dockerignore  .gitignore  Dockerfile  README.md  RunHMS.java  build.gradle  example-usage.sh
lakehouse/: __init__.py  config-example.yaml
lakehouse/schemas/: observations-usgs.json
lakehouse/setup/: new_table.py
lakehouse/utils/: iceberg.py  schema_loader.py
mrms/: Dockerfile  mrms_latest.py  requirements.txt
nwp/: Dockerfile  nwp_latest.py  requirements.txt
shared/: constants.py  utils.py
usgs/: Dockerfile  requirements.txt  usgs_latest.py
