[project]
name = "autp-fpt-dss"
version = "0.1.0"
description = "AUTP FPT dss utilities"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "rich>=13.0",
    "pandas>=3.0.1",
    "pyarrow>=23.0.1",
    "hecdss>=0.1.29"
]

[project.scripts]
auto-fpt-dss = "converter.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["converter"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "moto[s3,server]>=5.0",
    "ruff>=0.8",
    "testcontainers>=4.0",
    "docker>=7.1.0",
    "requests>=2.32.5",
]

[tool.ruff]
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
